# CGA-IN4152-FinalProject

./: CMakeLists.txt  final_project.html
cmake/: CompilerWarnings.cmake  Findfilesystem.cmake  pmm.cmake
framework/: CMakeLists.txt
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: disable_all_warnings.h  image.h  mesh.h  opengl_includes.h  shader.h  trackball.h  window.h
framework/src/: image.cpp  mesh.cpp  shader.cpp  trackball.cpp  window.cpp
framework/src/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
resources/: cube.mtl  forest2.mtl  forest3.mtl  tree.mtl  wall.mtl
shaders/: blinn_phong_frag.glsl  blinnphong_frag.glsl  lambert_frag.glsl  phong_frag.glsl  reflectionmap_frag.glsl  reflectionmap_vert.glsl  refractionmap_frag.glsl  shader_frag.glsl  shader_vert.glsl  shadow_vert.glsl  skybox_frag.glsl  skybox_vert.glsl
src/: abstraction.h  application.cpp  application.h  camera.cpp  camera.h  gpumesh.cpp  gpumesh.h  light.h  reflectionmap.cpp  reflectionmap.h  skybox.cpp  skybox.h  texture.cpp  texture.h
